agregue una seccion en testimonios.html

--- a/pages/testimonios.html
+++ b/pages/testimonios.html
@@ -159,7 +159,12 @@
         </section>
 
 
+        <div class="animacion text-center mb-4">
+            <h1 class="texto-animado">Gracias por tu visita</h1>
+        </div>
 
+
+    
 
 
     </main>
