modifique algunos archivos sass

--- a/pages/testimonios.html
+++ b/pages/testimonios.html
@@ -160,7 +160,7 @@
 
 
         <div class="animacion text-center mb-4">
-            <h1 class="texto-animado">Gracias por tu visita</h1>
+            <h1 class="texto-animado text-black">Gracias por tu visita!</h1>
         </div>
 
 
